--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "redux-state-tree",
   "version": "1.0.0",
-  "description": "This package provides a different and more manegable way to deal with a redux store by using a tree structure.",
+  "description": "This package provides a different and more manageable way to deal with a redux store by using a tree structure.",
   "main": "./build/index.js",
   "scripts": {
     "build": "webpack"
